--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -1,3 +1,9 @@
 {
-	"function": {}
+	"function": {
+		"gitFlowFunction": {
+			"build": true,
+			"providerPlugin": "awscloudformation",
+			"service": "Lambda"
+		}
+	}
 }
